fixed padding pushing content in footer out of alignment on two pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@
     font-family: "Vesper Libre", sans-serif;
     color: #9E9C99;
     font-size: 25px;
+    padding: 0;
 }
 
 .socials-container {
